# TestApi

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
data/: pets.py
models/: demowebshop.py  pets.py
notifications/: config.json
schemas/: cart_delete_request_schema.json  delete_response_schema.json  error_get_schema.json  pet_request_schema.json  response_add_to_card.json  schemas.py
steps/: demowebshop_steps.py  pet_steps.py
tests/API/: test_api.py  test_demowebshop.py
utils/: api_client.py  attach.py  demowebshop.py  schema_loader.py
